# property_management_lease

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
local_vdb/chroma_db/: chroma.sqlite3
src/: agent_execution.py  agent_tools.py  analysis_agent.py  email_handler.py  extract_pdf_data.py  get_structured_output.py  get_structured_output_v1.py  schemas.py  solution_pipeline.py
src/prompts/: analysis_agent_instruction_prompt.md
synthetic_data/: generate_synthetic_data.py
synthetic_data/knowledge_base/: building_rules_and_eligibility.md  credit_underwriting_protocols.md  unit_availability_ledger.md
vector_db_operations/: create_collections.py  retriever.py
