[project]
name = "lease-application-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "google-adk>=2.2.0",
    "google-api-python-client>=2.197.0",
    "google-auth-oauthlib>=1.4.0",
    "instructor>=1.15.1",
    "litellm>=1.88.1",
    "markitdown[pdf]>=0.1.6",
    "python-dotenv>=1.2.2",
    "reportlab>=4.5.1",
    "sentence-transformers>=5.5.1",
]
